# EasySynQ

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  PRODUCT.md  README.md  justfile
apps/api/: .test_durations  Dockerfile  alembic.ini  pyproject.toml
apps/api/src/easysynq_api/: __init__.py  config.py  logging.py  main.py  problems.py  readiness.py  redis_client.py
apps/api/src/easysynq_api/api/: _sse.py  audit.py  audits.py  auth.py  authz.py  capa.py  clauses.py  config.py  context.py  dcr.py  directory.py  document_types.py  documents.py  drift.py  health.py  improvement.py  ingestion.py  interested_parties.py  mgmt_review.py  notifications.py  objectives.py  pack_share.py  packs.py  processes.py  records.py  reports.py  retention_policies.py  risk.py  search.py  setup.py  users.py  verify.py  workflow.py
apps/api/src/easysynq_api/auth/: dependencies.py  jwks.py  tokens.py
apps/api/src/easysynq_api/cli/: __init__.py  audit.py  backfill_capa_target_dates.py  backfill_review_dates.py  backup.py  blob.py  grant_role.py  mirror.py  restore.py  seed_personas.py  setup.py  upgrade.py
apps/api/src/easysynq_api/db/: base.py  session.py
apps/api/src/easysynq_api/db/models/: __init__.py  _ack_enums.py  _audit_enums.py  _authz_enums.py  _capa_enums.py  _clause_enums.py  _context_enums.py  _dcr_enums.py  _drift_enums.py  _evidence_enums.py  _improvement_enums.py  _ingestion_enums.py  _interested_party_enums.py  _iso_audit_enums.py  _mgmt_review_enums.py  _notification_enums.py  _objective_enums.py  _pack_enums.py  _process_enums.py  _record_enums.py  _retention_enums.py  _risk_enums.py  _signature_enums.py  _vault_enums.py  _workflow_enums.py  acknowledgement.py  app_user.py  audit.py  audit_chain_cursor.py  audit_checkpoint.py  audit_checkpoint_sink.py  audit_event.py  audit_finding.py  audit_plan.py  audit_program.py  authz_grant.py  awareness_event.py  backup_policy.py  blob.py  capa.py  (+68 more)
apps/api/src/easysynq_api/db/seeds/: __init__.py  iso9001_clauses.py
apps/api/src/easysynq_api/domain/: __init__.py
apps/api/src/easysynq_api/domain/ack/: __init__.py  rules.py
apps/api/src/easysynq_api/domain/audits/: __init__.py  findings.py  fsm.py
apps/api/src/easysynq_api/domain/authz/: __init__.py  pdp.py  types.py
apps/api/src/easysynq_api/domain/capa/: __init__.py  closure.py  fsm.py  sod.py  targets.py
apps/api/src/easysynq_api/domain/context/: __init__.py  register_content.py  summary.py
apps/api/src/easysynq_api/domain/dcr/: __init__.py  fsm.py  obsoletion.py  where_used.py
apps/api/src/easysynq_api/domain/diff/: __init__.py  metadata.py  text.py  visual.py
apps/api/src/easysynq_api/domain/improvement/: __init__.py  fsm.py
apps/api/src/easysynq_api/domain/ingestion/: __init__.py  classifier.py  extractor.py  import_report.py  minhash.py  normalize.py  rule_classifier.py  rule_pack.py  source.py  summary.py  version_family.py
apps/api/src/easysynq_api/domain/interested_parties/: __init__.py  register_content.py  summary.py
apps/api/src/easysynq_api/domain/mgmt_review/: close_gate.py  inputs.py  minutes.py  pack_render.py
apps/api/src/easysynq_api/domain/objectives/: commitment.py  rules.py
apps/api/src/easysynq_api/domain/packs/: __init__.py  content_hash.py  dossier.py
apps/api/src/easysynq_api/domain/records/: __init__.py  (+4 more)
apps/api/src/easysynq_api/services/: __init__.py  owner_assignment.py  upgrade.py
apps/api/src/easysynq_api/tasks/: __init__.py  ack.py  app.py  audit.py  backup.py  blob_verify.py  capa.py  ingestion.py  lifecycle.py  mgmt_review.py  mirror.py  notifications.py  packs.py  records.py  review.py  visual_diff.py
apps/api/tests/: conftest.py
apps/api/tests/fixtures/ingestion_corpus/: VALIDATION.md  corpus.json
apps/api/tests/integration/: _owner_db.py  conftest.py  s5_helpers.py  test_acknowledgements.py  test_admin_notifications_health.py  test_approval.py  test_audience_resolver.py  test_audit.py  test_audits.py  test_auth_me.py  test_authz.py  test_authz_resource_extraction.py  test_awareness_e2e.py  test_awareness_emit.py  test_awareness_enqueue.py  test_backfill_capa_target_dates.py  test_backfill_review_dates.py  test_backup.py  test_blob_verify.py  test_capa.py  test_capa_overdue_sweep.py  test_capa_process_scope.py  test_capa_target_date_api.py  test_capabilities.py  test_clauses.py  test_concurrency_populate_existing.py  test_context_lifecycle.py  test_context_register.py  test_context_summary_endpoint.py  test_dcr.py  test_dcr_approval.py  test_dcr_capabilities.py  test_dcr_implement.py  test_dcr_where_used.py  test_diff.py  test_directory.py  test_document_types.py  test_documents_list.py  test_drift_endpoints.py  test_drift_report.py  (+72 more)
apps/api/tests/unit/: test_ack_rules.py  test_ack_task_registration.py  test_audit_canonical.py  test_audit_checkpoint.py  test_audit_fsm.py  test_audit_no_write_verbs.py  test_audit_watermark.py  test_auth_config.py  test_auth_jwt.py  test_authz_resolver.py  test_authz_resource.py  test_awareness_record.py  test_backup.py  test_backup_crypto.py  test_blob_verify.py  test_blob_verify_task_registration.py  test_caddy_headers.py  test_calendar_spec.py  test_capa_closure.py  test_capa_fsm.py  test_capa_overdue_model.py  test_capa_overdue_task.py  test_capa_sod.py  test_capa_targets.py  test_clause_catalog.py  test_context_register_content.py  test_context_routes.py  test_context_summary.py  test_dcr_fsm.py  test_dcr_where_used.py  test_diff.py  test_disposition_transitions.py  test_document_control_report.py  test_document_filters.py  test_documents_filters.py  test_drift3_enums.py  test_drill_archive_cleanup.py  test_duedate_snap.py  test_engine_context_users.py  test_export_print_audit.py  (+104 more)
(+1018 files in other folders)
