[project]
name = "easysynq-api"
version = "0.1.0"
description = "EasySynQ API — controlled-vault QMS (FastAPI / Python 3.12)"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "gunicorn>=22",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy[asyncio]>=2.0.30",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "celery[redis]>=5.4",     # async worker + Beat scheduler (tasks land in S6)
  "boto3>=1.35",            # S3 API (D2/D4 swap-clean); supports object-lock/WORM
  "httpx>=0.27",            # Keycloak JWKS / readiness probes
  "pyjwt[crypto]>=2.9",     # RS256 JWT validation against JWKS (later slices)
  "rfc8785>=0.1.4",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "asgi-lifespan>=2.1",
  "testcontainers>=4.8",
  "schemathesis>=3.36",
  "datamodel-code-generator>=0.26",
  "minio>=7.2.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/easysynq_api"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "BLE", "ASYNC", "S", "RUF"]
# S101 assert / S105-6 hardcoded test creds are fine in tests
per-file-ignores = { "tests/**" = ["S101", "S105", "S106"] }

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection defaults (= Depends(...)) are intentional.
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Header",
  "fastapi.Body",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true

# Third-party libs without bundled type stubs (mypy --strict would otherwise error).
[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*", "celery", "celery.*", "alembic", "alembic.*", "redis", "redis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "unit: fast, no external services",
  "integration: requires testcontainers (PG/MinIO/Redis)",
  "contract: schemathesis against openapi.yaml",
]
